"Entry without section" error. Also, to maintain proper sorting in the generated
changelogs when making a new release, docs/changelog.txt in the dfhack repo must
have the new release listed in the right place, even if no changes were made in
that repo.

Template for new versions:

## Structures

]]]

# Future

## Structures

# 51.07-r1

## Structures
- reorganize all structure definitions to match bay12 header layouts
- promote all bay12 structures, enums, and bitfields to top-level types: this means that most ``T_*`` types now have top-level names
- create numerous new structures whose contents had previously been missing or inlined into other structures
- merged several duplicate structure/enum types
- fix a variety of structure errors
- specific changes: Building vmethod ``countHospitalSupplies`` now returns ``abstract_building_contents`` instead of ``hospital_supplies``, which has different field names
- specific changes: When indexing into a vector named ``scribejobs``, replace ``item_id`` and ``written_content_id`` with ``target_id`` and ``relevant_id``
- specific changes: ``conversation_state_type.DenyPermissionSleep`` is now ``SleepPermissionRequested``
- specific changes: ``block_square_event_spoorst.[whatever]`` is now ``block_square_event_spoorst.info.[whatever]``
- specific changes: ``building_stockpilest.max_*/container_*`` is now ``building_stockpilest.storage.max_*/container_*``
- specific changes: ``building_civzonest.zone_settings.pen`` is now ``building_civzonest.zone_settings.pen.flags``
- specific changes: ``building_civzonest.zone_settings.tomb`` is now ``building_civzonest.zone_settings.tomb.flags``
- specific changes: ``building_bridgest.gate_flags.closed/closing/opening`` are now ``raised/raising/lowering``
- specific changes: ``building_weaponst.gate_flags.closed/closing/opening`` are now ``retracted/retracting/unretracting``