@@ -19,6 +19,7 @@ Template for new versions:
 # Future
 
 ## Structures
+- removed fake ``curse`` compound in ``unitst`` to resolve an alignment issue
 
 # 51.07-r1
 
